:lipstick: Add favicon, title and font link to index.html
https://realfavicongenerator.net/

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "CRA-With-API",
-  "name": "CRA-With-API Sample",
+  "short_name": "Podium",
+  "name": "Podium",
   "icons": [
     {
       "src": "favicon.ico",
