:heavy_plus_sign: Install react-lottie
https://github.com/chenqingspring/react-lottie

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "*.{js,css,md}": "prettier --write"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "react-lottie": "^1.2.3"
   }
 }
