:fire: Remove react-lottie dep

--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "*.{js,css,md}": "prettier --write"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "react-lottie": "^1.2.3"
+    "express": "^4.17.1"
   }
 }
