--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "*.{js,css,md}": "prettier --write"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1"
