--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongodb": "^3.6.3",
     "node-fetch": "^2.6.1"
   }
 }
