--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.1",
     "react-hot-toast": "^1.0.1",
     "react-lottie": "^1.2.3",
+    "react-query": "^3.5.12",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
